Bug 159641 - Pop-up notes containing the character "<" are not correctly shown and saved
Summary: Pop-up notes containing the character "<" are not correctly shown and saved
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-03-21 11:18 UTC by albert
Modified: 2008-03-24 00:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description albert 2008-03-21 11:18:02 UTC
Version:            (using KDE 4.0.2)
Installed from:    Ubuntu Packages

If you insert, in a document, a note containing the character "<" only the part of string before "<" is actually shown in the pop-up. If you close and reopen the document the part of string after "<" is lost.
Comment 1 Pino Toscano 2008-03-24 00:19:19 UTC
SVN commit 789332 by pino:

Backport a couple of fixes to the annotation window:
- explicitely deny rich text
- set the plain text w/o an implicit html conversion

CCBUG: 159641


 M  +3 -1      annotwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=789332
Comment 2 Pino Toscano 2008-03-24 00:19:19 UTC
SVN commit 789331 by pino:

Annotation window:
- explicitely deny rich text
- set the plain text w/o an implicit html conversion

BUG: 159641


 M  +3 -1      annotwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=789331