Annotation window: - explicitely deny rich text - set the plain text w/o an implicit html conversion

BUG: 159641

svn path=/trunk/KDE/kdegraphics/okular/; revision=789331